# srec-mvp-backend

./: AGENTS.md  Cargo.toml  README.md  REVIEW.md  docker-compose.yml  justfile
.sqlx/: query-04d6693dbd2d773f9dc8f3ee30a8937b4250d5014bb0fb219ffc3055b1b4cdcb.json  query-20f115b769b918e507d310f8283599a92bd62d4e6c3354e345447277bf403a78.json  query-210130834ee600cd13d9b6c51b5f99bc9dc034665798a2a9cb35b60a3480bcfa.json  query-2207b2a24f7fbd1e3fba173021fbc1713ab5df8eb000b3643f06c64ee81a9293.json  query-3c395c8fccaf3ef7b2365244058d8304b7e6edb2dfff2594a8960daf6bbd4bf8.json  query-687f5d2c6a53759f81bb11da144269f81c537aa7adfce251943459d136ec1176.json  query-8d924c0d5ddd0ac33179fc92be41ca4490470900d4ffa3b0def4e14eabd35103.json  query-b49f9c9948809397bc01e69b2f7e3faee7fe2c7ff472ddb44f2d22f6fc3c75be.json  query-b8935af6043e96b3416bbb392153c827b53ceb3b0a634db707bcd94d99bcaaa4.json  query-dc14c8104aebdeeeacb4a8a10382e25fedc984fbeebc4379f16a5a6bb020249b.json  query-dcf89ab1014d61452095f95e5988d5bf673373ac0862805fa50bdba136b38320.json  query-f8591075283adf04082ae0347075d3224755159b13f766c5ba87a4681bb70787.json  query-ffbd45d5b8f500580f7b44e4ec39a544207fa5fbe3d74e8cd8dfa69c67c1e69b.json
examples/: db_flows.rs  llm_recommend.rs  tmdb_search.rs
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_add_tmdb_series_id_to_reviews.down.sql  0002_add_tmdb_series_id_to_reviews.up.sql  0003_add_confidence_to_recommendations.down.sql  0003_add_confidence_to_recommendations.up.sql
pgadmin/: servers.json
src/: errors.rs  lib.rs  main.rs  models.rs  state.rs
src/adapters/: mod.rs
(+8 files in other folders)
